tests_ex32/moodle_test/errors 3.txt
students/Compilation_Error_gets_10/error1.c:6:1: error: expected '}'
^
students/Compilation_Error_gets_10/error1.c:4:1: note: to match this '{'
{
^
1 error generated.
